--- a/TaskManager.DesktopClient/App.xaml
+++ b/TaskManager.DesktopClient/App.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="./Resources/Styles/MainStyleDictionaty.xaml"/>
+                <ResourceDictionary Source="./Resources/Styles/CheckBoxToggleStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
